fixed rdoc format.

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,15 +4,14 @@ run rrails-server by guard.
 
 == Usage
 
-$ guard init rrails
-# edit your Guardfile
-$ bundle exec guard
+    $ guard init rrails
+    # edit your Guardfile
+    $ bundle exec guard
 
 == SEE ALSO
 
-guard: https://github.com/guard/guard
-
-rrails: https://github.com/walf443/rrails
+* guard: https://github.com/guard/guard
+* rrails: https://github.com/walf443/rrails
 
 == Contributing to guard-rrails
  
